# local-mlops-template

./: README.md  main.py  pyproject.toml
configs/: config.yaml
data/: data
notifications/: notification.py
